--- a/plantas.html
+++ b/plantas.html
@@ -19,7 +19,8 @@
 	img{
 		border: 4px solid;
 		border-color: #6aa84f;
-		text-align: center;
+		margin: 0 auto;
+		display: block;
 	}
         </style>
 	</head>
@@ -105,7 +106,9 @@ Criei sua própria planta carnívora
 </h2>
 <p>
 Se você estiver interessado em comprar sementes, visite ​
-nossa loja​ com preços.
+<a href="loja.html">nossa loja</a>​ com preços.
+
+
 </p>
 
 
