Finalizando o segundo exericio e corrigindo bugs no primeiro

--- a/loja.html
+++ b/loja.html
@@ -4,14 +4,49 @@
 		<meta charset="utf8"> </meta>
 		<style>
 			body {
-			  background-image: url(imagens/videira.png);
-			  background-repeat: no-repeat;
-			  background-position: top right;
+				font-family: "Arial";
+				background-image: url(imagens/videira.png);
+				background-repeat: no-repeat;
+				background-position: top right;
+			}
+			img{
+				border: 4px solid;
+				border-color: #6aa84f;
+				margin: 0 auto;
+				display: block;
+			}
+			table {
+			    border-collapse: collapse;
+			}
+
+			table, tr, td{
+			    border: 1px solid black;
 			}
 		</style>
 	</head>
 
 	<body>
 		<h1>Loja de Sementes</h1>
+
+		<p><img src="imagens/piranha-plant.png"></p>
+
+		<p>
+			Aqui você pode ver a cotação do preço das sementes de algumas espécies que cultivamos.    
+		</p>
+
+		<table align="center" border="1">
+			
+			<tr> <th colspan = "4">Sementes</th> </tr>
+			<tr> <th>Espécie</th> <th>Dificuldade de Germinação</th> <th>Sementes por pacote</th> <th>Preço(mangos)</th></tr>
+			<tr align = "center"> <td>Drosera dielsiana</td> <td>fácil</td> <td>30</td> <td>R$ 2,00</td></tr>
+			<tr align = "center"> <td>Drosera venusta</td> <td>fácil</td> <td>30</td> <td>R$ 2,00</td></tr>
+			<tr align = "center"> <td>Sarracenia hibrido</td> <td>média semear no inverno</td> <td>10</td> <td>R$ 3,00</td></tr>
+			<tr align = "center"> <td>Drosera nidiformis</td> <td>média</td> <td>15</td> <td>R$ 2,00</td></tr>
+			</tr>
+		</table>
+
+		<p>
+			Caso queira fazer um pedido, envie um e­mail para <a href="custodio@plantascarnivoras.com.br">custodio@plantascarnivoras.com.br</a>
+		</p>
 	</body>
 </html>
