Finalizando o terceiro exercio

--- a/loja.html
+++ b/loja.html
@@ -2,18 +2,13 @@
 	<head>
 		<title> Loja</title>
 		<meta charset="utf8"> </meta>
+		<link rel="stylesheet" href="estilos.css">
 		<style>
 			body {
 				font-family: "Arial";
 				background-image: url(imagens/videira.png);
 				background-repeat: no-repeat;
 				background-position: top right;
-			}
-			img{
-				border: 4px solid;
-				border-color: #6aa84f;
-				margin: 0 auto;
-				display: block;
 			}
 			table {
 			    border-collapse: collapse;
