--- a/plantas.html
+++ b/plantas.html
@@ -2,6 +2,7 @@
 	<head> 
 		<title>		Plantas Carnívoras	 </title>
 		<meta charset="utf8"> </meta>
+		<link rel="stylesheet" href="estilos.css">
         <style>
 		h1 {
 			font-family: "Time new roman";
@@ -15,12 +16,6 @@
 		}
 		body{
 			font-family: "Arial";
-		}
-		img{
-			border: 4px solid;
-			border-color: #6aa84f;
-			margin: 0 auto;
-			display: block;
 		}
         </style>
 	</head>
